--- a/templates/labeling.html
+++ b/templates/labeling.html
@@ -104,7 +104,7 @@
                     <div class="bottom-buttons">
                         <div>
                             <div class="bottom-button blue">
-                                <div onclick="Pro_Label()"><svg viewBox="0 0 24 24">
+                                <div onclick="Anti_Label()"><svg viewBox="0 0 24 24">
                                         <g>
                                             <path
                                                 class='{{"bottom-button blue already-labeled" if labeled_pro else "normal"}}'
@@ -114,11 +114,11 @@
                                         </g>
                                     </svg></div>
                             </div>
-                            <p>Pro</p>
+                            <p>Anti</p>
                         </div>
                         <div>
                             <div class="bottom-button green">
-                                <div onclick="Anti_Label()"><svg ,viewBox="0 0 24 24">
+                                <div onclick="Neutral_Label()"><svg ,viewBox="0 0 24 24">
                                         <!--If we have already labeled the tweet, then it gets the class already-labeled and the symbol is colored accordingly-->
                                         <g>
                                             <path
@@ -129,11 +129,11 @@
                                         </g>
                                     </svg></div>
                             </div>
-                            <p>Anti</p>
+                            <p>Neutral</p>
                         </div>
                         <div>
                             <div class="bottom-button red">
-                                <div onclick="Neutral_Label()"><svg viewBox="0 0 24 24">
+                                <div onclick="Pro_Label()"><svg viewBox="0 0 24 24">
                                         <g>
                                             <path
                                                 class='{{"bottom-button red already-labeled" if labeled_neutral else "normal"}}'
@@ -143,7 +143,7 @@
                                         </g>
                                     </svg></div>
                             </div>
-                            <p>Neutral</p>
+                            <p>Pro</p>
                         </div>
                         <div>
                             <div class="bottom-button blue">
@@ -162,7 +162,7 @@
                                         </g>
                                     </svg></div>
                             </div>
-                            <p>News</p>
+                            <p>Skip</p>
                         </div>
                     </div>
                 </div>
